[gd_scene load_steps=10 format=2]

[ext_resource path="res://Ability/Channel/Channel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ability/Channel/Abilities/FireSplash/FireSplash.gd" type="Script" id=2]

[sub_resource type="Curve" id=1]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 360 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 0.871911, 0.636667, 1, 1, 0.295898, 0, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0.290909 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.3
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 70.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 1.0
angle_curve = SubResource( 2 )
scale = 7.0
scale_random = 1.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[node name="FireSplash" instance=ExtResource( 1 )]
position = Vector2( 1, 0 )
script = ExtResource( 2 )
title = "Fire splash"
cooldown = 0.3
damage_tag = 1
damage = 2
is_not_spectate = false

[node name="Particles2D" type="Particles2D" parent="." index="2"]
amount = 200
speed_scale = 2.0
local_coords = false
process_material = SubResource( 7 )

[node name="HitBox" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox" index="0"]
polygon = PoolVector2Array( 70, 0, 61, 37, 0, 0, 62, -36 )

[node name="Tween" type="Tween" parent="." index="4"]

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_HitBox_body_exited"]
